# volnoti

./: AUTHORS  Makefile  Makefile.am  README.md  client.c  common-defs.h  common.c  common.h  configure.ac  daemon.c  gopt.h  notification.c  notification.h  package.sh  progressbar.xcf  progressbar_empty.xcf
pkg/arch/: PKGBUILD
pkg/gentoo/: volnoti-0.1.ebuild  volnoti-9999.ebuild
res/: Makefile.am  progressbar_empty.xcf  progressbar_full.xcf
src/: .gitignore  Makefile.am  client.c  common.c  common.h  daemon.c  notification.c  notification.h  specs.xml  value-client-stub.h  value-daemon-stub.h
